# My-CV-Exp-Template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.sh  test.py  train.py
configs/: config.yaml
configs/logger/: mlflow.yaml
configs/optimizer/: adam.yaml
configs/scheduler/: cosine_annealing.yaml
src/: augmentation.py  callbacks.py  config.py  datamodule.py  dataset.py  loss.py  model_dispatcher.py  transform.py  utils.py
src/models/: __init__.py  attention.py  base_model.py  norms.py  unet.py
